mvp + deleted items list

--- a/src/client/components/list.scss
+++ b/src/client/components/list.scss
@@ -6,7 +6,11 @@
   color: yellow;
 }
 
-li:hover {
+button:hover {
   cursor: pointer;
   color: blue;
+}
+
+.list_item {
+  border: solid 1px black;
 }
